...
                                    android:text="Services"

                                    android:textColor="@color/text_color1"
                                    android:textSize="@dimen/fourteen_sp" />

                                <ImageView
                                    android:id="@+id/ivAddServices"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_weight="0"
                                    android:padding="@dimen/three_dp"
                                    android:src="@mipmap/ic_add_icon" />

...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/serviceRecycView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/ten_dp"
                                    android:layout_marginEnd="@dimen/ten_dp"
                                    android:layout_marginBottom="@dimen/fourteen_dp" />

...
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/twenty_dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/cardtyreConfig"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="start|center"
                                android:orientation="horizontal">

...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/twenty_dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/cardtechinicalSuggestion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="start|center"
                                android:orientation="horizontal">

...
                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/suggestionsRecycView"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent" />

                                </RelativeLayout>


...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.walkins.aapkedoorstep.custom.BoldTextView
            android:id="@+id/tvSkipService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/eight_dp"
            android:text="Skip Service"
...
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="Note : Once all mandatory details are added then Submit button will be enable"
            android:textColor="@color/gray"
            android:textSize="@dimen/twelve_sp" />

        <com.walkins.aapkedoorstep.custom.BoldHeavyTextView
            android:id="@+id/btnSubmitAndComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:background="@drawable/rounded_blue"
...
