...
                                    android:layout_marginStart="@dimen/sixteen_dp"
                                    android:layout_marginTop="@dimen/eight_dp"
                                    android:layout_marginEnd="@dimen/sixteen_dp"
                                    android:orientation="horizontal">

                                    <com.walkins.aapkedoorstep.custom.NormalEditText
                                        android:id="@+id/edtOtp1"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/eight_dp"
                                        android:layout_marginEnd="@dimen/eight_dp"
                                        android:layout_marginRight="@dimen/eight_dp"
...
                                        android:padding="8dip"
                                        android:singleLine="true"
                                        android:textColor="@color/text_color1"
                                        android:textSize="@dimen/sixteen_sp" />

                                    <com.walkins.aapkedoorstep.custom.NormalEditText
                                        android:id="@+id/edtOtp2"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_marginStart="@dimen/eight_dp"
                                        android:layout_marginEnd="@dimen/eight_dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/layout_bg_corner"
...
                                        android:padding="8dip"
                                        android:singleLine="true"
                                        android:textColor="@color/text_color1"
                                        android:textSize="@dimen/sixteen_sp" />

                                    <com.walkins.aapkedoorstep.custom.NormalEditText
                                        android:id="@+id/edtOtp3"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/eight_dp"
                                        android:layout_marginEnd="@dimen/eight_dp"
                                        android:layout_weight="1"
...
                                        android:padding="8dip"
                                        android:singleLine="true"
                                        android:textColor="@color/text_color1"
                                        android:textSize="@dimen/sixteen_sp" />

                                    <com.walkins.aapkedoorstep.custom.NormalEditText
                                        android:id="@+id/edtOtp4"
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="@dimen/eight_dp"
                                        android:layout_marginEnd="@dimen/eight_dp"
                                        android:layout_weight="1"
...
                            android:orientation="vertical"
                            android:weightSum="2"
                            android:layout_marginStart="@dimen/twenty_two_dp"
                            android:layout_marginEnd="@dimen/twenty_two_dp">

                            <com.walkins.aapkedoorstep.custom.BoldButton
                                android:id="@+id/btnVerify"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/twenty_four_dp"
                                android:layout_marginBottom="@dimen/twenty_four_dp"
                                android:background="@drawable/round_corner_button_yellow"
...
